Bare basics, graph works, needs polishing

--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,71 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 		<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+		<script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
 		<script src="script.js"></script>
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="style.css" />
+		<link
+			href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css"
+			rel="stylesheet"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/icon?family=Material+Icons"
+		/>
 		<title>Graphx</title>
 	</head>
 	<body>
 		<main id="app">
-			<input v-model="equation" type="text">
-			<p>{{ calculate() }}</p>
+			<!-- Centered content -->
+			<article v-if="!coordinates.length" id="query">
+				<!-- Input box -->
+				<label class="mdc-text-field mdc-text-field--outlined equation">
+					<span class="mdc-notched-outline">
+						<span class="mdc-notched-outline__leading"></span>
+						<span class="mdc-notched-outline__notch">
+							<span class="mdc-floating-label" id="my-label-id"
+								>Equation</span
+							>
+						</span>
+						<span class="mdc-notched-outline__trailing"></span>
+					</span>
+					<input
+						v-model="equation"
+						type="text"
+						class="mdc-text-field__input"
+						aria-labelledby="my-label-id"
+					/>
+				</label>
+				<br />
+
+				<!-- Button to move on -->
+				<button class="mdc-button visualize" @click="calculate">
+					<div class="mdc-button__ripple"></div>
+					<span class="mdc-button__label">Visualize</span>
+				</button>
+
+				<!-- Snackbar error -->
+				<div class="mdc-snackbar mdc-snackbar--stacked error">
+					<div
+						class="mdc-snackbar__surface"
+						role="status"
+						aria-relevant="additions"
+					>
+						<div class="mdc-snackbar__label" aria-atomic="false">
+							{{error}}
+						</div>
+					</div>
+				</div>
+			</article>
+			<!-- Output -->
+			<article id="display" v-else>
+				<span
+					v-for="c in coordinates"
+					class="coordinate"
+					:style="{ left: c.x/stepX + 250 + 'px', top: c.y/stepY + 250 + 'px'}"
+				>
+				</span>
+			</article>
 		</main>
 	</body>
 </html>
